tests/ui/impl-trait/type_parameters_captured.stderr
error[E0310]: the parameter type `T` may not live long enough
  --> $DIR/type_parameters_captured.rs:8:5
   |
LL |     x
   |     ^
   |     |
   |     the parameter type `T` must be valid for the static lifetime...
   |     ...so that the type `T` will meet its required lifetime bounds
   |
help: consider adding an explicit lifetime bound
   |
LL | fn foo<T: 'static>(x: T) -> impl Any + 'static {
   |         +++++++++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0310`.
